PS02 Solutions Dino Wildi

--- a/problemSets/PS02/template/PS2.tex
+++ b/problemSets/PS02/template/PS2.tex
@@ -96,9 +96,9 @@
 \begin{enumerate}
 	
 	\item [(a)]
-	Calculate the $\chi^2$ test statistic by hand (even better if you can do "by hand" in \texttt{R}).\\
+	\textit{Calculate the $\chi^2$ test statistic by hand (even better if you can do "by hand" in \texttt{R}).\\}
 	\vspace{7cm}
-	
+
 	\item [(b)]
 	Now calculate the p-value from the test statistic you just created (in \texttt{R}).\footnote{Remember frequency should be $>$ 5 for all cells, but let's calculate the p-value here anyway.}  What do you conclude if $\alpha = .1$?\\
 	
